--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,37 @@
-version: "3.8"
-
 services:
-  api:
-    build: ./api
-    ports:
-      - "3333:3333"
-
   frontend:
     build: ./frontend
+    container_name: frontend
+    restart: always
+    ports:
+      - "8080:8080"
+    networks:
+      - fallstudie
+
+  api:
+    build: ./api
+    container_name: api
+    restart: always
+    ports:
+      - "3333:3333"
+    networks:
+      - fallstudie
+
+  gateway:
+    build: ./gateway
+    container_name: gateway
     ports:
       - "80:80"
+      - "443:443"
+    depends_on:
+      - frontend
+      - api
+    volumes:
+      - ./gateway/conf/nginx.conf:/etc/nginx/nginx.conf
+      - /etc/letsencrypt/archive:/etc/letsencrypt/archive:ro
+    networks:
+      - fallstudie
+
+networks:
+  fallstudie:
+    driver: bridge
