--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,19 @@
-FROM node:20-alpine AS builder
+FROM node:20-alpine as builder
+
+RUN apk add --no-cache bash
 
 WORKDIR /frontend
 
 COPY package*.json ./
-
 RUN npm install
 
 COPY . .
-
 RUN npm run build
 
 FROM nginx:1.25-alpine
 
-WORKDIR /usr/share/nginx/html
+COPY --from=builder /frontend/dist /usr/share/nginx/html
+COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
-COPY --from=builder /frontend/dist ./
-
-EXPOSE 80
-
-CMD [ "nginx", "-g", "daemon off;" ]
+EXPOSE 8080
+CMD ["nginx", "-g", "daemon off;"] 
